# bi-vwm-semestral

./: Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/: main.yml
src/: App.svelte  main.css  main.ts
src-wasm/: Cargo.toml
src-wasm/src/: index_builder.rs  index_searcher.rs  lib.rs
src/components/: AllDocuments.svelte
src/lib/: database.svelte.ts  documents.ts  files.ts  utils.ts  wasm.ts
src/lib/components/: IndexRebuilder.svelte  Notifications.svelte  notifications.svelte.ts
src/lib/screens/: FileListing.svelte  Read.svelte
