[package]
name = "src-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
porter-stemmer = "0.1.2"
regex = "1.12.3"
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_bytes = "0.11.17"
stop-words = "0.10.0"
tsify = { version = "0.5.5", features = ["js"] }
wasm-bindgen = "0.2.100"
web-sys = "0.3.91"
